cmake_minimum_required(VERSION 3.19)
project(Chapter11 C)

set(CMAKE_C_STANDARD 99)

add_executable(Chapter11 main.c exercise01.c exercise02.c exercise03.c exercise04.c exercise05.c exercise06.c exercise07.c exercise08.c exercise09.c exercise10.c exercise11.c exercise12.c exercise13.c exercise14.c exercise15.c exercise16.c)