cmake_minimum_required(VERSION 3.19)
project(Chapter12 C)

set(CMAKE_C_STANDARD 99)

add_executable(Chapter12 main.c exercise01.c exercise02.c exercise02.h exercise02-b.c exercise03.h exercise03-b.c exercise03.c exercise04.c exercise05.c exercise06.c exercise07.h exercise07-b.c exercise07.c exercise08.c exercise09.c)