cmake_minimum_required(VERSION 3.19)
project(Chapter17 C)

set(CMAKE_C_STANDARD 99)

add_executable(Chapter17 main.c film.c film.h exercise01.c list.c list.h exercise02.c exercise03.c list2.c list2.h exercise04.c queue.c queue.h exercise05.c stack.c stack.h exercise06.c binary_search.c binary_search.h exercise07.c tree.c tree.h exercise08.c pettree.c pettree.h)